<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    tools:context=".LeaderboardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:focusable="false"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/toolbar_content_description"
            android:nextFocusDown="@+id/textView"
            android:nextFocusRight="@+id/textView"
            android:nextFocusLeft="@layout/content_leaderboard_activity"
            android:nextFocusUp="@layout/content_leaderboard_activity"
            android:focusable="true"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/toolbar_text_view_margin"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="80"
                    android:background="@color/transparent"
                    android:nextFocusDown="@+id/toolbar_submit_button"
                    android:nextFocusRight="@+id/toolbar_submit_button"
                    android:nextFocusLeft="@+id/toolbar"
                    android:nextFocusUp= "@+id/toolbar"
                    android:focusable="true"
                    android:text="@string/top_learners_list_activity_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_text_view_text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/toolbar_submit_button"
                    android:layout_width="@dimen/submit_button_layout_width"
                    android:layout_height="@dimen/submit_button_layout_height"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/submit_button_marginEnd"
                    android:layout_weight="20"
                    android:background="@drawable/submit_button_shape"
                    android:backgroundTint="@color/white"
                    android:nextFocusDown="@layout/content_leaderboard_activity"
                    android:nextFocusRight="@layout/content_leaderboard_activity"
                    android:nextFocusLeft="@+id/textView"
                    android:nextFocusUp= "@+id/textView"
                    android:focusable="true"
                    android:clickable="true"
                    android:text="@string/submit_button_text_description"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textDirection="locale"
                    android:textSize="@dimen/submit_button_text_size" />


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <include layout="@layout/content_leaderboard_activity" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>